-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8
-
Component/s: core-libs
-
b84
-
solaris
-
Verified
Interruptible I/O on Solaris has been highly problematic and the long standing plan has been to remove it from the JDK.
In JDK6 the VM option UseVMInterruptibleIO was introduced to allow developers/customers experiment with disabling it.
In JDK7 the default value of UseVMInterruptibleIO was changed to be "false" so that it is disabled by default.
For JDK8 it is finally time to remove the feature. This bug tracks changing the native in src/share/native/java/io and src/solaris/native/java/io so that the system calls are used directly rather than going through the JVM_* functions. Updating of the networking code will be done via a different bug.
- relates to
-
JDK-8034174 Remove use of JVM_* functions from java.net code
-
- Closed
-
-
JDK-8249612 Remove unused ISNANF and ISNAND from jdk_util_md.h
-
- Resolved
-
-
JDK-8068370 (process) Executing recently modified file results in ETXTBSY
-
- Open
-
-
JDK-6554406 Change switch UseVMInterruptibleIO default to false (sol)
-
- Closed
-
-
JDK-6993732 Remove the HPI
-
- Closed
-