8001334: Remove use of JVM_* functions from java.io code

Replace JVM_* functions with direct system calls in java io area

Reviewed-by: alanb, uta, martin